--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <!-- <div id="hyperdrive"></div> -->
+    <canvas id="canvas"></canvas>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
