--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" type="text/css" href="/src/style.css" /> -->
-    <title>Vite + TS</title>
+    <link rel="stylesheet" type="text/css" href="/src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
+    <title>Hello 👋</title>
   </head>
   <body>
-    <!-- <div id="hyperdrive"></div> -->
-    <canvas id="canvas"></canvas>
-    <div id="app"></div>
+    <main class="container">
+      <div class="hero-text-container">
+        <h1>Hi there! I am Arda</h1>
+        <h2>Let's get in touch</h3>
+      </div>
+      <canvas id="canvas"></canvas>
+      <div id="app"></div>
+    </main>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
