--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <main class="container">
       <div class="hero-text-container">
-        <h1>Hi there! I am Arda</h1>
-        <h2>Let's get in touch</h3>
+        <h1 class="hero-text">Hi there! I am Arda</h1>
+        <h2 class="hero-subtext">Let's get in touch</h3>
       </div>
       <canvas id="canvas"></canvas>
       <div id="app"></div>
