--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" type="text/css" href="/src/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
     <title>Hello 👋</title>
   </head>
   <body>
     <main class="container">
       <div class="hero-text-container">
         <h1 class="hero-text">Hi there! I am Arda</h1>
-        <h2 class="hero-subtext">Let's get in touch</h3>
+        <h2 class="hero-subtext">I am a software engineer. Let's get in touch</h3>
       </div>
       <canvas id="canvas"></canvas>
-      <div id="app"></div>
+      <!-- <div id="app"></div> -->
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
