implement some simple MVC pattern for the API and start off with basic Canvas element

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/src/style.css" />
+    <link rel="stylesheet" type="text/css" href="/frontend/styles/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
@@ -11,13 +11,14 @@
   </head>
   <body>
     <main class="container">
-      <div class="hero-text-container">
+      <!-- <div class="hero-text-container">
         <h1 class="hero-text">Hi there! I am Arda</h1>
         <h2 class="hero-subtext">I am a software engineer. Let's get in touch</h3>
-      </div>
-      <canvas id="canvas"></canvas>
+      </div> -->
+      <!-- <canvas id="canvas"></canvas> -->
+      <canvas id="playground"></canvas>
       <!-- <div id="app"></div> -->
     </main>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/frontend/main.js"></script>
   </body>
 </html>
