final warping stars

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <main class="container">
-      <!-- <div class="hero-text-container">
+      <div class="hero-text-container">
         <h1 class="hero-text">Hi there! I am Arda</h1>
         <h2 class="hero-subtext">I am a software engineer. Let's get in touch</h3>
-      </div> -->
+      </div>
       <!-- <canvas id="canvas"></canvas> -->
       <canvas id="playground"></canvas>
       <!-- <div id="app"></div> -->
