--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main class="container">
       <div class="hero-text-container">
-        <h1 class="hero-text">Hi there! I am Arda</h1>
+        <h1 class="hero-text">Hi there!</h1>
         <h2 class="hero-subtext">I am a software engineer. Let's get in touch</h3>
       </div>
       <!-- <canvas id="canvas"></canvas> -->
