--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Exo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Hello 👋</title>
   </head>
   <body>
     <main class="container">
       <div class="hero-text-container">
-        <h1 class="hero-text">Hi there!</h1>
-        <h2 class="hero-subtext">I am a software engineer. Let's get in touch</h3>
+        <h1 class="hero-text">Hi there! I am <span class="my-name">Arda</span></h1>
+        <h2 class="hero-subtext">I am a web developer with a frontend and design focus.</h3>
       </div>
       <!-- <canvas id="canvas"></canvas> -->
       <canvas id="playground"></canvas>
