update prettier config

--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/frontend/styles/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Exo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet"> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Exo:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Hello 👋</title>
   </head>
   <body>
     <main class="container">
       <div class="hero-text-container">
-        <h1 class="hero-text">Hi there! I am <span class="my-name">Arda</span></h1>
-        <h2 class="hero-subtext">I am a web developer with a frontend and design focus.</h3>
+        <h1 class="hero-text">
+          Hi there! I am <span class="my-name">Arda</span>
+        </h1>
+        <h2 class="hero-subtext">
+          I am a web developer with a frontend and design focus.
+        </h2>
       </div>
-      <!-- <canvas id="canvas"></canvas> -->
       <canvas id="playground"></canvas>
+      <!-- <canvas id="canvas"></canvas> -->
+      <canvas id="tree"></canvas>
       <!-- <div id="app"></div> -->
     </main>
     <script type="module" src="/frontend/main.js"></script>
