--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
           I am a web developer with a frontend and design focus.
         </h2>
       </div>
-      <canvas id="playground"></canvas>
+      <div class="canvas-container">
+        <canvas id="playground"></canvas>
+      </div>
+      <canvas id="automata"></canvas>
       <!-- <canvas id="canvas"></canvas> -->
-      <canvas id="tree"></canvas>
+      <!-- <canvas id="tree"></canvas> -->
       <!-- <div id="app"></div> -->
     </main>
     <script type="module" src="/frontend/main.js"></script>
