--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
           I am a web developer with a frontend and design focus.
         </h2>
       </div>
-      <div class="canvas-container">
+      <div class="playground-container">
         <canvas id="playground"></canvas>
+      </div>
+      <div class="automata-container">
+        <canvas id="automata"></canvas>
       </div>
       <canvas id="automata"></canvas>
       <!-- <canvas id="canvas"></canvas> -->
